--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leetcode",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/hamirmahal/LeetCode-Solutions",
+  "homepage": "https://hamirmahal.github.io/LeetCode-Solutions/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
